# DevKit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: FindAlice.cmake
htdocs/: index.html
htdocs/css/: application.css
htdocs/js/: application.js
src/: config.hpp.in  devkit.cpp  devkit_http.cpp  devkit_http.hpp  http_connection.cpp  http_connection.hpp  http_connection_manager.hpp  http_mime_type.cpp  http_mime_type.hpp  http_reply.cpp  http_reply.hpp  http_request.hpp  http_request_handler.hpp  http_request_parser.hpp  http_server.hpp  json.cpp  json.hpp
